 * Removed RSS code from latest_tool.
 * Fixed example code in document_upload.
 
2006-11-13 cjg
 * Cleaned up style on login page.
 * Login page now focuses on first input field.
 * Cleaned up default information.html page.

2006-11-13 cjg
 * Renamed $eprint->has_editor to $eprint->in_editorial_scope_of to 
    avoid semantic confusion. 
 * Ordervalues of pagerange fixed.

2006-11-13 cjg
 * DROP TABLE now only drops tables which exist.
 * All drop tables now go via $db->drop_table

2006-11-13 cjg
 * Fixed timestamp in OAI record headers
 * Moved getpwnam into platform module

2006-11-13 cjg
 * Fixed title in latest tool

2006-11-13 moj
 * switched 'an owner' to 'a depositor' in phrases.
 * Lost a block of redundant phrases
 * Fixed typo (cancec->cancel)

2006-11-13 moj
 * Added back compatibility for get_children

2006-11-13 cjg
 * Added check that dirs have not changed since generate_apacheconf was run.
 * Added CORE:: clarity to Platform::UNIX
 
2006-11-13 cjg
 * Fixed bug in Platform::Unix::getpwnam

2006-11-13 moj
 * Split up the intros for reject/remove with email - now have
    author_lang_pref, remove_form_intro, reject_form_intro
 * Added use for SavedSearch::Run (cjg)
 * Removed 'Not logged in' from login bar (cjg)
 * Switched sides for search/login (cjg)

2006-11-13 cjg
 * Made method in Session to render an input grid with hidden help.
 * Multi and Upload now use this
 * Toggles now blur when you click them
 * If only one component then internal buttons don't do the #t thing
 * Added help to document fields.
 * Redesigned subject component interface
 * Disabled degenerate mode for metafield input - always in a grid now.
 * Added styling to arrows and pos numbers in grid
 * Made headings in input grid a bit smaller
 * Renamed "Email (if known)" to "Email".
 * Renamed "More Spaces" to "More input rows"
 * Changed page width back to 720
 * More CSS styling.

2006-11-13 cjg
 * Added phrase for subject ancestors name
