@@ -5328,3 +5328,5 @@ PACKAGE: 2.2.99.2
 2006-11-13 cjg
  * Added phrase for subject ancestors name
 
+2006-11-13 cjg
+ * Fixed a bug in error phrases in Upload
